Add basic observerble

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,1 +1,9 @@
 <p>todo-list works!</p>
+
+<div>
+  <ul class="listItem">
+    <li *ngFor="let item of items">
+      <span class="badge">{{item.title}}</span>
+    </li>
+  </ul>
+</div>
